--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -152,7 +152,7 @@ For additional details on ethnographic sampling and creation of the *leadershipd
 
 We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or theoretical framework). We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap.
 
-We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ (so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$), and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
+We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using $1-cor(x, y)$ (so that the distance between highly correlated variables is close to $0$, the distance between uncorrelated variables is close to $1$, and the distance between negatively correlated variables is close to $2$), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the *pvclust* package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
 <!-- To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA]. Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors. -->
 
@@ -215,7 +215,7 @@ As Figure \@ref(fig:grouptype) reveals, the distribution of text records by grou
 
 ## Variable distributions
 
-For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars) ), we computed the percentage of text records that provided support, and we computed the percentage of cultures with at least one text record providing support for that variable. See Figure \@ref(fig:varsupport).
+For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars)), we computed the percentage of text records that provided support, and we computed the percentage of cultures with at least one text record providing support for that variable. See Figure \@ref(fig:varsupport).
 
 ```{r varsupport, fig.width=15, fig.height=15, fig.cap="Support for each coded variable of leader functions (top) and qualities (bottom). Blue circles: percent of text records with evidence of support (95% CI computed with a binomial mixed effects models with random intercept for author nested within culture). Red triangles: percent of cultures with evidence of support (95% CI computed with a cluster bootstrap)."}
 plot.variable.support
@@ -237,17 +237,15 @@ knitr::include_graphics("Figures/m_pvclust.both.svg")
 
 The leader quality cluster analysis (Figure \@ref(fig:cluster)A) identified two top-level clusters, one that comprised mostly variables related to material, social, and reproductive success, and one that comprised mostly variables indicating the relationship between leaders and their groups, which we term *social orientation*. Within the latter top-level cluster we identify two interpretable though weakly supported sub-clusters which are annotated with text. Within the first top-level cluster, we identify a subcluster mainly comprising variables related to the ability to provide social benefits, and a subcluster mainly comprising variables related to the ability to impose social costs.
 
-The leader functions cluster analysis (Figure \@ref(fig:cluster)B) also identified two top-level clusters; the larger of which we identify as a management functions cluster (i.e., *Organize cooperation*, *Military command*, *Resolve conflict*) and the smaller a prosociality cluster (i.e., *Social functions*, *Distribute resources*, *Hospitality*). Within the management cluster, we identified a mediation subcluster (e.g., *Resolve conflict*, *Provide counsel*), and a an organization subcluster (e.g., *Organize cooperation*, *Military command*).
+The leader functions cluster analysis (Figure \@ref(fig:cluster)B) also identified two top-level clusters; the larger of which we identified as a management functions cluster (i.e., *Organize cooperation*, *Military command*, *Resolve conflict*) and the smaller of which we identified as a prosociality cluster (i.e., *Social functions*, *Distribute resources*, *Hospitality*). Within the management cluster, we identified a mediation subcluster (e.g., *Resolve conflict*, *Provide counsel*), and an organization subcluster (e.g., *Organize cooperation*, *Military command*).
 
 In naming the clusters and subclusters, we gave extra weight to variables that were strongly supported in the ethnographic record (Figure \@ref(fig:varsupport)), and therefore not all variables within these clusters were clearly related to the themes we identified.
 
 ## Benefits and costs of leadership and followership
 
-The frequency of leader and follower costs and benefits were estimated similarly to the leader qualities and functions described above. In these data leaders are most commonly receiving benefits in the form of greater access to material resources (documented in about 70% of cultures) and increased social status (documented in about 65% of cultures). Receiving social services, mating benefits, and food benefits are also relatively frequent benefits of leadership cross-culturally. The costs follow the potential benefits and leaders stand to lose their high social status (documented in about 45% of cultures) and greater access to resources (documented in about 40% of cultures). 
+The frequency of leader and follower costs and benefits were estimated similarly to the leader qualities and functions described above. In these data leaders are most commonly receiving benefits in the form of greater access to material resources (documented in about 70% of cultures) and increased social status (documented in about 65% of cultures). Receiving social services, mating benefits, and food benefits are also relatively frequent benefits of leadership cross-culturally. The costs follow the potential benefits and leaders stand to lose their high social status (documented in about 45% of cultures) and greater access to resources (documented in about 40% of cultures). See Figure \@ref(fig:varsupportcb).
 
-Followers on the other hand also benefit from leadership systems through receiving material resources (documented in about 50% of cultures) but otherwise most frequently benefit through social *services* provided (documented in about 35% of cultures). Mating and fitness benefits are relatively rare for followers. Followers most frequently incur costs in the form of material resources lost (documented in about 40% of cultures) and in providing social services (documented in about 25% of cultures). 
-
-For both leaders and followers, individuals stand to lose what they are able to gain. The clear differences lie in leaders' opportunities for increased social status and mating opportunities. See Figure \@ref(fig:varsupportcb).
+Followers on the other hand also benefit from leadership systems through receiving material resources (documented in about 50% of cultures) but otherwise most frequently benefit through social *services* provided (documented in about 35% of cultures). Mating and fitness benefits are relatively rare for followers. Followers most frequently incur costs in the form of material resources lost (documented in about 40% of cultures) and in providing social services (documented in about 25% of cultures). See Figure \@ref(fig:varsupportcb).
 
 ```{r varsupportcb, echo=FALSE, warning=FALSE, message=F, fig.width=15, fig.height=11, fig.cap="Support for each coded variable for the costs and benefits of leadership and followership. Blue circles: percent of text records with evidence of support (95% CI computed with a binomial mixed effects models with random intercept for author nested within culture). Red triangles: percent of cultures with evidence of support (95% CI computed with a cluster bootstrap)."}
 plot.variable.support_costs_benefits
@@ -289,7 +287,7 @@ plot.variable.support_costs_benefits
 
 # Discussion
 
-Results of the current study represent the broadest and most comprehensive view of the qualities of leaders, (e.g., the types of people that occupy leadership roles), the functions of leaders, (e.g., what do leaders do), and the costs and benefits of leadership for both leaders and followers, across a diverse and culturally representative sample of the ethnographic record. These results reveal universal dimensions of human leadership while also suggesting important variation by group type, subsistence strategy, and sex of the leader.   
+This exploratory study extracted the qualities, functions, benefits, and costs of leadership from the ethnographic record. These variables were *not* determined prior to the study but were instead identified and coded during several passes through `r nrow(text_records)` texts on leadership obtained from the eHRAF (see Methods section). Our results therefore represent the broadest and most comprehensive view of the qualities of leaders (i.e., the types of people that occupy leadership roles), the functions of leaders (i.e., what leaders do), and the costs and benefits of leadership for both leaders and followers, across a diverse and culturally representative sample of the ethnographic record. These results reveal universal dimensions of human leadership while also suggesting important variation by group type, subsistence stype, and sex of the leader.
 
 ## The group context of human leadership
 
@@ -313,34 +311,51 @@ Our analysis identified several leader functions and qualities that were near cu
 
 ### Universal dimensions
 
-Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. See Figure \@ref(fig:varsupport).  
+Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. See Figure \@ref(fig:varsupport). These qualities and functions correspond to those highlighted by several evolutionary theories of leadership [@garfield_review_2019]. See the *Synthesis* section below.
 
 ### Variable dimensions
 
 Several functions and qualities that are theoretically important were relatively rare in the ethnographic record. In the literature on leadership among non-human animals, for example, leaders commonly initiate group movement [@couzin_effective_2005], and "movement" was one of four leadership dimensions that @smith_leadership_2016 identified as comparable among humans and non-human animals, yet movement or migration was identified as a leader function in only `r movement_pct`% of cultures. Several theories of leadership also emphasize the moral authority of leaders [e.g., @henrich_big_2015; @henrich_evolution_2001; @richerson_tribal_2009; @tietjen_moral_1985; @boggild_evolved_2016], yet leaders were seen as sources of moral authority or "fair" in only a minority of cultures (`r moral_pct`% and `r fairness_pct`% of cultures, respectively). The "Dominance" theory of leadership [e.g., @chapais_competence_2015; @cheng_dominance_2019; @cheng_pride_2010; @henrich_evolution_2001; @tiger_imperial_1971] emphasizes leaders' ability to instill fear, but in only `r feared_pct`% of cultures were leaders characterized as feared. Finally, a large literature on leadership in industrialized societies highlights the attractiveness of leaders [e.g., @sinclair_sexuality_1995; @altemeyer_sexual_1974; @march_leadership_2009], but leaders were characterized as attractive in only `r attractive_pct`% of cultures.
 
-## Clusters of leader functions and qualities
+## Clusters of leader qualities
 
-Leadership and high social status are expected to be associated with particular suites of characteristics, which potentially vary by cultural or social context, personality, or via other inter-individual variation [@cheng_two_2013; @von_rueden_roots_2014; @hogan_personality_2020; @lukaszewski_extraversion_2015; @henrich_evolution_2001]. Exploratory analyses reported here suggest multiple leadership phenotypes and associated features. 
+Leadership and high social status are expected to be associated with particular suites of characteristics, which potentially vary by cultural or social context, personality, or via other inter-individual variation [@cheng_two_2013; @von_rueden_roots_2014; @hogan_personality_2020; @lukaszewski_extraversion_2015; @henrich_evolution_2001]. Exploratory cluster analyses reported here suggest multiple leadership phenotypes and associated features. 
 
-<!-- Qualities features -->
+We performed hierarchical cluster analysis on our leader quality and leader function variables to determine if these variables formed theoretically meaningful categories. Variables were clustered together if they were positively correlated. Leader qualities formed two top-level clusters, which we identify as a *Material, social, and reproductive success* cluster, and a *Social orientation* cluster. See Figure \@ref(fig:cluster)A.
 
-There is likely a strong connection between shamanism and ritual-based influence and the dominance style of leadership. Super natural abilities, being feared, aggressiveness, and strong authority formed a strong cluster of leadership qualities (Figure \@ref(fig:cluster)A, *Dominant/shaman* cluster $AU = 96$). Artistic performance is also implicated in this style of leadership and ceremonial, artistic performances by shamans are common displays which often incorporate the superhuman abilities of shamans [@singh_cultural_2017]. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n=43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
+Most of the leader quality variables were found in the *Social orientation* cluster, which had two smaller and more weakly supported subclusters that we identified as *Ability to provide social benefits* and *Ability to impose social costs*. The social benefit subcluster contained the *Knowledgeable/intelligent* and *Experienced/accomplished* variables that have been emphasized by the *Prestige* theory [@henrich_evolution_2001; @cheng_two_2013] and the more general *Computational services* theory [@hagen_leadership_2019; @garfield_evolutionary_2019], and these variables are among the most strongly supported in the ethnographic record (Figure \@ref(fig:varsupport), a point to which we shall return. The remaining social benefit variables included a mix of positive personal traits, such as generosity and proper behavior, as well as interpersonal skills, having a favorable personality, oratory skill, and charisma, which correspond to a charismatic style of leadership that has been identified in industrialized settings [@den_hartog_culture_1999; @grabo_charismatic_2016; @howell_role_2005]. A few variables did not seem to fit the social benefit theme, however, such as *Xenophobia* and *Drug consumption* (although drug use is often an important social activity).
 
-We have also identified a broad suite of positive personal characteristics, including many of the most cross-culturally frequent qualities of leadership, which generally correspond to prestige and charismatic leadership [@van_vugt_dual_2019; @cheng_pride_2010; @grabo_charismatic_2016; @henrich_evolution_2001; @price_evolution_2014; @von_rueden_roots_2014]. Being knowledgeable or intelligent and highly experienced or accomplished cluster closely with high social status (the three most cross-culturally frequent qualities of leaders). Other personal characteristics, such as having a favorable personality, humility, oratory skill, charisma, and interpersonal skills are also associated with this feature of leadership (Figure \@ref(fig:cluster)A, *Positive personal characteristics* cluster $AU = 100$.). These features  suggest a strong link between prestige-based leadership, associated with deference towards individuals with special kills, high intelligence, and accomplishments [@cheng_dominance_2019; @van_vugt_dual_2019; @henrich_evolution_2001], and charismatic leadership, associated with oratory skills, high charisma, confidence, and interpersonal skills [@den_hartog_culture_1999; @grabo_charismatic_2016; @howell_role_2005]. 
+The subcluster of social cost variables, which included *Physically formidable*, *Aggressiveness*, and *Feared*, align fairly closely with the *Dominance* theory of status and leadership [@tiger_imperial_1971; @barkow_prestige_1975; @barkow_darwin_1989; @henrich_evolution_2001; @cheng_two_2013]. Interestingly, this cluster also contained *Supernatural*. There is likely a strong connection between shamanism and ritual-based influence and the dominance style of leadership. Artistic performance is also implicated in this style of leadership and ceremonial, artistic performances by shamans are common displays which often incorporate the superhuman abilities of shamans [@singh_cultural_2017]. 
 
-The most common benefits associated with leadership are material resources, increased social status, and social services (See Figure \@ref(fig:varsupportcb)). Measures of material and social wealth coupled with reproductive success represent a feature of leadership qualities descriptive of benefits of social influence and high social status (Figure \@ref(fig:cluster)A, *Material, social, & reproductive success* cluster $AU = 96$.). 
+Leaders, probably as a consequence of their ability to provide social benefits and impose social costs, are also characterized by their material, social, and reproductive success (top cluster, Figure \@ref(fig:cluster)A), which is consistent with much of the theoretical literature [e.g., @von_rueden_mens_2016; @bowles_emergence_2010; @glowacki_role_2013]. Again, some variables in this subcluster, such as *Ingroup member* and *Loyalty*, did not quite fit the theme.
 
-<!-- Functions features -->
+## Clusters of leader functions
 
-Results suggest X features of the functions of leaders. Leaders may serve various prosocial functions, such as providing subsistence and distributing resources, they may be tasked with providing hospitality services to guests or followers, they function to protect the group via a variety of behaviors, and very commonly are leading in various social functions tied to cultural values and social practices (Figure \@ref(fig:cluster)B, *Prosocial* cluster $AU = 95$).
+The leader function variables formed two major clusters, one that we identified as "Prosociality" and one that we identified as "Management". The prosocial cluster included *Distribute resources*, *Protection*, and *Prosocial investment*, which are functions that are commonly highlighted in the anthropological literature on leadership [@sahlins_poor_1963; @johnson_organizational_1982; @service_origins_1975; @boehm_egalitarian_1993; @boehm_hierarchy_1999; @johnson_evolution_1987]. 
+
+The management subcluster included many more variables, which were grouped into two subclusters that we identified as "Mediation" and "Organization". The mediation subcluster included variables such as *Resolve conflict* (the most widely supported function in our sample) and *Provide counsel* (also widely supported), which again are functions that are commonly noted in the anthropological literature [@wiessner_risk_1982; @wiessner_collective_2019; @boehm_hierarchy_1999; @knauft_violence_1991]. Other variables in this subcluster indicated more generic group strategizing, such as *Strategic planning* and *Group representative* [@xx; @yy].
+
+The larger organization subcluster included variables such as *Organize cooperation*, *Ritual functions*, and *Military command*. This subcluster aligns with evolutionary theories of leadership that emphasize the role of leaders in organizing collective actions [@hooper_theory_2010; @van_vugt_cognitive_2007; for review, see @garfield_evolutionary_2019].
+
+## Benefits and costs of leadership and followership
+
+The evolution of leadership and followership is somewhat perplexing. Leadership often involves the provisioning of a public good at an individual cost, raising the question of how the individual benefits of leadership outweigh the costs. Followership, on the other hand, involves relinquishing individual decision-making to a leader who might or might not act in the follower's interest. The benefits of followership must also outweigh the costs. We therefore coded all benefits and costs of both leadership and followership. Leaders were widely reported to receive material benefits and social status, but loss of material resources and social status were also widely reported. The results were similar for followers: followers benefited from increased material and social resources, but also often lost material and social resources. Our results cannot determine, however, if the benefits to leaders and followers outweighed their costs. See Figure \@ref(fig:varsupportcb).
+
+For both leaders and followers, in summary, individuals stood to lose what they were able to gain. The major difference between leaders and followers lay in leaders' opportunities for increased social status and mating opportunities, relative to followers. See Figure \@ref(fig:varsupportcb).
 
 ## Synthesis
 
+In general, our results conform to the characteristics of leaders that are emphasized in the literature on the evolution of leadership [for review, see @garfield_evolutionary_2019]. Leaders in the ethnographic record are portrayed as generally prosocial, and serve to resolve conflicts and organize cooperation. Leaders also receive material, social, and reproductive benefits. There is also a "dominant" style of leadership involving physical formidability, fear, and aggression.
+
+One interesting pattern that has not been widely discussed in the evolutionary literature on leadership is the role of shamans and their intersection, in our results, with the dominant style of leadership. Our social cost cluster (Figure \@ref(fig:cluster)A) includes the *Supernatural* abilities variable. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n=43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
+
+We also found a link between prestige-based leadership, associated with deference towards individuals with special skills, high intelligence, and accomplishments [@cheng_dominance_2019; @van_vugt_dual_2019; @henrich_evolution_2001], and charismatic leadership, associated with oratory skills, high charisma, confidence, and interpersonal skills [@vanvugtXXX]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related, or part of a broader strategy of social influence based on the provisioning of various benefits.
+
+Intergenerational transmission; The fact that variables indicating success in these three domains were correlated supports the...
 
 ## Limitations 
 
-This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
+This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss and the way they chose to discuss it. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
 
 # Conclusion
 
@@ -348,7 +363,7 @@ These exploratory results provide an empirical foundation for future research on
 
 Contemporary theoretical models of the evolution of leadership often emphasize leaders roles in organizing collective action and in managing between group conflicts [@hooper_theory_2010; @pietraszewski_evolution_2019; @price_evolution_2014]. Results here do support the important functions of leaders in organizing cooperation and facilitating social functions -- services which provide direct benefits to the group. However, the ubiquity of conflict resolution as a function of leaders across social contexts calls for greater attention to the roles of leaders of all types in managing intra-group conflict between group members -- services tailored to provide direct benefits to a few individuals and more indirect group benefits. [@glowacki_leadership_2015; @wiessner_collective_2019; @pupu_challenges_2018]. 
 
-
+Conflict resolution, decision-making, providing counsel. Dominance. Benefits/costs.
 
 # References
 
